--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+// Google Fonts
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
+
+// Variables
+$white: hsl(0, 0%, 100%);
+$lightPink: hsl(275, 100%, 97%);
+$grayishPurple: hsl(292, 16%, 49%);
+$darkPurple: hsl(292, 42%, 14%);
+$fontSize: 16px;
+
+// Global Styles
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
